# corto

./: .gitignore  README.md  pyproject.toml
api/commands/: set_destination.py  set_rudder_angle.py  set_sails_angle.py
api/objects/: boat_attitude.py  nav_params.py  sail_trim.py
api/objects/commands/: SendTelemetry.py  SetSail.py  TurnRudder.py  set_destination.py  set_sail.py
api/objects/nav_params/: nav_params.py  sail_trim.py
api/objects/units/: gps_coord.py  knots.py
boat/: corto.py
boat/comms/: command_receiver.py
boat/comms/commands/: command_receiver.py
boat/comms/lora/: boat-receiver.py
boat/controls/: boat_asset_controller.py  boat_attitude_controller.py  rudder_controller.py  sail_controller.py  servos_controller.py
boat/navigation/: navigator.py  path_planner.py
boat/objects/: angle.py  boat_attitude.py  gps_coord.py  nav_params.py
boat/telemetry/: gps_locator.py  nav_params_recorder.py  wind_direction_estimator.py  wind_vane.py
boat/telemetry/sensors/: gps_locator.py  speed_over_water_sensor.py  wind_vane.py
src/main/python/boat/: corto.py  run.sh
src/main/python/boat/comms/: command_receiver.py
src/main/python/boat/controls/: boat_attitude_controller.py  rudder_controller.py  sail_controller.py  servos_controller.py
src/main/python/boat/navigation/: navigator.py
src/main/python/lora/: radio.py
src/main/python/transmitter/: boat_remote.py  run.sh  setup.sh
src/main/python/utils/: raspi-spi-reassign.py
transmitter/: boat_remote.py  lora.py  setup.py  transmitter.py
utils/: lora_utils.py
(+32 files in other folders)
