[tool.poetry]
name = "corto"
version = "0.1.0"
description = ""
authors = ["gm2211 <gmecocci@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pyformance = "^0.4"
inventorhatmini = "^0.0.1"
pimoroni-ioexpander = "^0.0.5"
"RPi.GPIO" = "^0.7.1"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"